--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "aos": "^3.0.0-beta.6",
+    "hamburger-react": "^2.5.1",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
     "react-typed": "^2.0.12",
+    "sharp": "^0.33.4",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
